Twilight.Web/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twilight
  labels:
    app.kubernetes.io/name: twilight
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: twilight
  template:
    metadata:
      labels:
        app.kubernetes.io/name: twilight
    spec:
      containers:
      - name: twilight
        image: cr.yandex/crp3fr717nr1rn78qeij/twilight-web:1.2.6
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health/live
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
